[tool.poetry]
name = "flamenn"
version = "0.1.2"
description = "Flamenn is a high-level PyTorch wrapper for rapid model protyping. It uses a builder pattern for creating network arquitectures using PyTorch's components."
authors = ["Yoquec <alvaro.viejo@pm.me>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Yoquec/flamenn"

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.1.2"
tqdm = "^4.66.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
